--- a/psc/templates/psc/vr_checklist_form.html
+++ b/psc/templates/psc/vr_checklist_form.html
@@ -16,7 +16,7 @@
 					<p>Observer ID (always start every text message with "PSC" followed by your Observer ID Number)</p>
 				</div>
 				<div class='third'>
-					<input type='text' name='PSC' class='text numeric'>
+					<input type='text' name='PSC' class='text numeric' maxlength='6'>
 				</div>
 			</div>
 		</div>
@@ -32,10 +32,10 @@
 					<p>What time did the registration centre open? (tick one) (If the centre has not opened by 12 noon complete a critical incident form and report immediately)</p>
 				</div>
 				<div class='third'>
-					<p><input name='A' type='radio' class='radio numeric'> Open by 8AM 
-					<p><input name='A' type='radio' class='radio numeric'> Between 8AM &amp; 10AM</p>
-					<p><input name='A' type='radio' class='radio numeric'> Between 10AM &amp; 12 noon</p>
-					<p><input name='A' type='radio' class='radio numeric'> Not Open by 12 noon</p>
+					<div class='options'>Open by 8AM<br>(1) <input name='A' type='radio' class='radio numeric'> </div>
+					<div class='options'>Between 8AM &amp; 10AM<br>(2)<input name='A' type='radio' class='radio numeric'></div>
+					<div class='options'>Between 10AM &amp; 12 noon<br>(3)<input name='A' type='radio' class='radio numeric'> </div>
+					<div class='options'>Not Open by 12 noon<br>(4)<input name='A' type='radio' class='radio numeric'> </div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -46,9 +46,9 @@
 					<p>Were you permitted to observe at the registration centre? (tick Yes or No) (If not permitted to observe complete a critical incident form and immediately report)</p>
 				</div>
 				<div class='third'>
-					<p><input name='B' type='radio' class='radio numeric' value='1'> Yes</p>
-					<p><input name='B' type='radio' class='radio numeric' value='2'> No</p>
-					<p><input name='B' type='radio' class='radio numeric' value=''> Unchecked</p>
+					<div class='options'>Yes<input name='B' type='radio' class='radio numeric' value='1'> </div>
+					<div class='options'>No<input name='B' type='radio' class='radio numeric' value='2'></div>
+					<div class='options'>Unchecked<input name='B' type='radio' class='radio numeric' value='3'> </div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -59,7 +59,7 @@
 					<p>How many registration officers were at the registration centre? (enter number)</p>
 				</div>
 				<div class='third'>
-					<input type='text' class='text numeric'>
+					<input name='C' type='text' class='text numeric' maxlength='3'>
 				</div>
 			</div>
 			<div class='parent'>
@@ -70,10 +70,10 @@
 					<p>Did the registration centre have a complete and functioning Direct Data Capture (DDC) system (tick all that apply)</p>
 				</div>
 				<div class='third'>
-					<p><input name='D' type='checkbox' class='checkbox alpha' value='1'>Missing/Broken Computer</p>
-					<p><input name='D' type='checkbox' class='checkbox alpha' value='2'>Missing/Broken Camera</p>
-					<p><input name='D' type='checkbox' class='checkbox alpha' value='3'>Missing/Broken Printer</p>
-					<p><input name='D' type='checkbox' class='checkbox alpha' value='4'>None(Missing/Broken)</p>
+					<div class='options'>Missing/Broken Computer<br />(1)<input name='D' type='checkbox' class='checkbox alpha' value='1'></div>
+					<div class='options'>Missing/Broken Camera<br />(2)<input name='D' type='checkbox' class='checkbox alpha' value='2'></div>
+					<div class='options'>Missing/Broken Printer<br />(3)<input name='D' type='checkbox' class='checkbox alpha' value='3'></div>
+					<div class='options'>None<br />(Missing/Broken)<br />(4)<input name='D' type='checkbox' class='checkbox alpha' value='4'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -84,11 +84,11 @@
 				<p>Was the registration centre missing any of the following materials? (tick all that apply)</p>
 				</div>
 				<div class='third'>
-					<p><input name='E' type='checkbox' class='checkbox alpha' value='1'>Manual Register of Voters (EC. 1A)</p>
-					<p><input name='E' type='checkbox' class='checkbox alpha' value='2'>Indelible Ink to Mark Fingers</p>
-					<p><input name='E' type='checkbox' class='checkbox alpha' value='3'>Blank Temporary Voter's Cards</p>
-					<p><input name='E' type='checkbox' class='checkbox alpha' value='4'>INEC Stamp</p>
-					<p><input name='E' type='checkbox' class='checkbox alpha' value='5'>None Missing</p>
+					<div class='options'>Manual Register of Voters (EC. 1A)<input name='E' type='checkbox' class='checkbox alpha' value='1'></div>
+					<div class='options'>Indelible Ink to Mark Fingers<input name='E' type='checkbox' class='checkbox alpha' value='2'></div>
+					<div class='options'>Blank Temporary Voter's Cards<input name='E' type='checkbox' class='checkbox alpha' value='3'></div>
+					<div class='options'>INEC Stamp<input name='E' type='checkbox' class='checkbox alpha' value='4'></div>
+					<div class='options'>None Missing<input name='E' type='checkbox' class='checkbox alpha' value='5'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -99,7 +99,7 @@
 					<p>How many political party agents were at the registration centre? (enter number)</p>
 				</div>
 				<div class='third'>
-					<input type='text' name='F' class='text numeric'>
+					<input type='text' name='F' class='text numeric' maxlength='3'>
 				</div>
 			</div>
 			<div class='parent last'>
@@ -110,9 +110,9 @@
 					<p>Were any security agents present at the registration centre? (tick Yes or No)</p>
 				</div>
 				<div class='third'>
-					<p><input name='B' type='radio' class='radio numeric' value='1'> Yes</p>
-					<p><input name='B' type='radio' class='radio numeric' value='2'> No</p>
-					<p><input name='B' type='radio' class='radio numeric' value=''> Unchecked</p>
+					<p><input name='G' type='radio' class='radio numeric' value='1'> Yes</p>
+					<p><input name='G' type='radio' class='radio numeric' value='2'> No</p>
+					<p><input name='G' type='radio' class='radio numeric' value='3'> Unchecked</p>
 				</div>
 			</div>
 		</div>
@@ -130,9 +130,9 @@
 				<div class='third'>
 					<p><input name='H' type='radio' class='radio numeric' value='1'>None</p>
 					<p><input name='H' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Half</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Most</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>All</p>
+					<p><input name='H' type='radio' class='radio numeric' value='3'>Half</p>
+					<p><input name='H' type='radio' class='radio numeric' value='4'>Most</p>
+					<p><input name='H' type='radio' class='radio numeric' value='5'>All</p>
 				</div>
 			</div>
 			<div class='parent'>
@@ -143,11 +143,11 @@
 					<p>Was anyone permitted to register who had indelible ink on his/her finger meaning he/she had already registered? (tick the one that applies best)</p>
 				</div>
 				<div class='third'>
-					<p><input name='H' type='radio' class='radio numeric' value='1'>None</p>
-					<p><input name='H' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Half</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Most</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>All</p>
+					<p><input name='J' type='radio' class='radio numeric' value='1'>None</p>
+					<p><input name='J' type='radio' class='radio numeric' value='2'>Few</p>
+					<p><input name='J' type='radio' class='radio numeric' value='3'>Half</p>
+					<p><input name='J' type='radio' class='radio numeric' value='4'>Most</p>
+					<p><input name='J' type='radio' class='radio numeric' value='5'>All</p>
 				</div>
 			</div>
 			<div class='parent'>
@@ -158,11 +158,11 @@
 					<p>Was anyone permitted to register who did not appear to be from the community? (tick the one that applies best)</p>
 				</div>
 				<div class='third'>
-					<p><input name='H' type='radio' class='radio numeric' value='1'>None</p>
-					<p><input name='H' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Half</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Most</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>All</p>
+					<p><input name='K' type='radio' class='radio numeric' value='1'>None</p>
+					<p><input name='K' type='radio' class='radio numeric' value='2'>Few</p>
+					<p><input name='K' type='radio' class='radio numeric' value='3'>Half</p>
+					<p><input name='K' type='radio' class='radio numeric' value='4'>Most</p>
+					<p><input name='K' type='radio' class='radio numeric' value='5'>All</p>
 				</div>
 			</div>
 			<div class='parent'>
@@ -173,11 +173,11 @@
 					<p>Were the fingers of successful registrants marked with indelible ink? (tick the one that applies best)</p>
 				</div>
 				<div class='third'>
-					<p><input name='H' type='radio' class='radio numeric' value='1'>None</p>
-					<p><input name='H' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Half</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Most</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>All</p>
+					<p><input name='M' type='radio' class='radio numeric' value='1'>None</p>
+					<p><input name='M' type='radio' class='radio numeric' value='2'>Few</p>
+					<p><input name='M' type='radio' class='radio numeric' value='3'>Half</p>
+					<p><input name='M' type='radio' class='radio numeric' value='4'>Most</p>
+					<p><input name='M' type='radio' class='radio numeric' value='5'>All</p>
 				</div>
 			</div>
 			<div class='parent'>
@@ -188,11 +188,11 @@
 					<p>Were photos taken of successful registrants? (tick the one that applies best)</p>
 				</div>
 				<div class='third'>
-					<p><input name='H' type='radio' class='radio numeric' value='1'>None</p>
-					<p><input name='H' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Half</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Most</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>All</p>
+					<p><input name='N' type='radio' class='radio numeric' value='1'>None</p>
+					<p><input name='N' type='radio' class='radio numeric' value='2'>Few</p>
+					<p><input name='N' type='radio' class='radio numeric' value='3'>Half</p>
+					<p><input name='N' type='radio' class='radio numeric' value='4'>Most</p>
+					<p><input name='N' type='radio' class='radio numeric' value='5'>All</p>
 				</div>
 			</div>
 			<div class='parent'>
@@ -203,11 +203,11 @@
 					<p>Were successful registrants issued with temporary voter's cards? (tick the one that applies best)</p>
 				</div>
 				<div class='third'>
-					<p><input name='H' type='radio' class='radio numeric' value='1'>None</p>
-					<p><input name='H' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Half</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Most</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>All</p>
+					<p><input name='P' type='radio' class='radio numeric' value='1'>None</p>
+					<p><input name='P' type='radio' class='radio numeric' value='2'>Few</p>
+					<p><input name='P' type='radio' class='radio numeric' value='3'>Half</p>
+					<p><input name='P' type='radio' class='radio numeric' value='4'>Most</p>
+					<p><input name='P' type='radio' class='radio numeric' value='5'>All</p>
 				</div>
 			</div>
 			<div class='parent'>
@@ -218,11 +218,11 @@
 					<p>Were the names of successful registrants entered into the Direct Data Capture (DDC) system? (tick the one that applies best)</p>
 				</div>
 				<div class='third'>
-					<p><input name='H' type='radio' class='radio numeric' value='1'>None</p>
-					<p><input name='H' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Half</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Most</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>All</p>
+					<p><input name='Q' type='radio' class='radio numeric' value='1'>None</p>
+					<p><input name='Q' type='radio' class='radio numeric' value='2'>Few</p>
+					<p><input name='Q' type='radio' class='radio numeric' value='3'>Half</p>
+					<p><input name='Q' type='radio' class='radio numeric' value='4'>Most</p>
+					<p><input name='Q' type='radio' class='radio numeric' value='5'>All</p>
 				</div>
 			</div>
 			<div class='parent'>
@@ -233,11 +233,11 @@
 					<p>Were the names of successful registrants entered into the Manual Register of Voters (MRV) Form EC.1A? (tick the one that applies best)</p>
 				</div>
 				<div class='third'>
-					<p><input name='H' type='radio' class='radio numeric' value='1'>None</p>
-					<p><input name='H' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Half</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Most</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>All</p>
+					<p><input name='R' type='radio' class='radio numeric' value='1'>None</p>
+					<p><input name='R' type='radio' class='radio numeric' value='2'>Few</p>
+					<p><input name='R' type='radio' class='radio numeric' value='3'>Half</p>
+					<p><input name='R' type='radio' class='radio numeric' value='4'>Most</p>
+					<p><input name='R' type='radio' class='radio numeric' value='5'>All</p>
 				</div>
 			</div>
 			<div class='parent'>
@@ -248,11 +248,11 @@
 					<p>Did anyone successfully register for someone who was not present at the registration centre (i.e. proxy registration)? (tick the one that applies best)</p>
 				</div>
 				<div class='third'>
-					<p><input name='H' type='radio' class='radio numeric' value='1'>None</p>
-					<p><input name='H' type='radio' class='radio numeric' value='2'>Few</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Half</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>Most</p>
-					<p><input name='H' type='radio' class='radio numeric' value=''>All</p>
+					<p><input name='S' type='radio' class='radio numeric' value='1'>None</p>
+					<p><input name='S' type='radio' class='radio numeric' value='2'>Few</p>
+					<p><input name='S' type='radio' class='radio numeric' value='3'>Half</p>
+					<p><input name='S' type='radio' class='radio numeric' value='4'>Most</p>
+					<p><input name='S' type='radio' class='radio numeric' value='5'>All</p>
 				</div>
 			</div>
 			<div class='parent'>
@@ -263,9 +263,9 @@
 					<p>Did the Direct Data Capture (DDC) system properly function throughout the day? (tick Yes or No)</p>
 				</div>
 				<div class='third'>
-					<p><input name='B' type='radio' class='radio numeric' value='1'> Yes</p>
-					<p><input name='B' type='radio' class='radio numeric' value='2'> No</p>
-					<p><input name='B' type='radio' class='radio numeric' value=''> Unchecked</p>
+					<p><input name='T' type='radio' class='radio numeric' value='1'> Yes</p>
+					<p><input name='T' type='radio' class='radio numeric' value='2'> No</p>
+					<p><input name='T' type='radio' class='radio numeric' value='3'> Unchecked</p>
 				</div>
 			</div>
 			<div class='parent'>
@@ -276,9 +276,9 @@
 					<p>Did the registration centre run out of materials during the day? (tick Yes or No)</p>
 				</div>
 				<div class='third'>
-					<p><input name='B' type='radio' class='radio numeric' value='1'> Yes</p>
-					<p><input name='B' type='radio' class='radio numeric' value='2'> No</p>
-					<p><input name='B' type='radio' class='radio numeric' value=''> Unchecked</p>
+					<p><input name='U' type='radio' class='radio numeric' value='1'> Yes</p>
+					<p><input name='U' type='radio' class='radio numeric' value='2'> No</p>
+					<p><input name='U' type='radio' class='radio numeric' value='3'> Unchecked</p>
 				</div>
 			</div>
 			<div class='parent'>
@@ -289,9 +289,9 @@
 					<p>Did the registration centre remain open until 5 pm? (tick Yes or No)</p>
 				</div>
 				<div class='third'>
-					<p><input name='B' type='radio' class='radio numeric' value='1'> Yes</p>
-					<p><input name='B' type='radio' class='radio numeric' value='2'> No</p>
-					<p><input name='B' type='radio' class='radio numeric' value=''> Unchecked</p>
+					<p><input name='V' type='radio' class='radio numeric' value='1'> Yes</p>
+					<p><input name='V' type='radio' class='radio numeric' value='2'> No</p>
+					<p><input name='V' type='radio' class='radio numeric' value='3'> Unchecked</p>
 				</div>
 			</div>
 			<div class='parent'>
@@ -302,9 +302,9 @@
 					<p>Did anyone attempt to disrupt voter registration at the centre? (tick Yes or No)</p>
 				</div>
 				<div class='third'>
-					<p><input name='B' type='radio' class='radio numeric' value='1'> Yes</p>
-					<p><input name='B' type='radio' class='radio numeric' value='2'> No</p>
-					<p><input name='B' type='radio' class='radio numeric' value=''> Unchecked</p>
+					<p><input name='W' type='radio' class='radio numeric' value='1'> Yes</p>
+					<p><input name='W' type='radio' class='radio numeric' value='2'> No</p>
+					<p><input name='W' type='radio' class='radio numeric' value='3'> Unchecked</p>
 				</div>
 			</div>
 			<div class='parent'>
@@ -315,9 +315,9 @@
 					<p>Did anyone attempt to intimidate or harass people in or around the centre? (tick Yes or No)</p>
 				</div>
 				<div class='third'>
-					<p><input name='B' type='radio' class='radio numeric' value='1'> Yes</p>
-					<p><input name='B' type='radio' class='radio numeric' value='2'> No</p>
-					<p><input name='B' type='radio' class='radio numeric' value=''> Unchecked</p>
+					<p><input name='X' type='radio' class='radio numeric' value='1'> Yes</p>
+					<p><input name='X' type='radio' class='radio numeric' value='2'> No</p>
+					<p><input name='X' type='radio' class='radio numeric' value='3'> Unchecked</p>
 				</div>
 			</div>
 			<div class='parent'>
@@ -328,7 +328,7 @@
 					<p>How many people registered during this day? (record number from Certificate of Completion of Daily Registration of Voters Form EC.1B(1)) (enter number) (if not permited to record this figure enter &quot;9999&quot;)</p>
 				</div>
 				<div class='third'>
-					<p><input name='B' type='text' class='text numeric'></p>
+					<p><input name='Y' type='text' class='text numeric'></p>
 
 				</div>
 			</div>
@@ -340,7 +340,7 @@
 					<p>How many people so far (total to date) have registered at this centre according to the Manual Register of Voters (MRV) Form EC.1A? (enter number) (if not permitted to record this figure enter &quot;9999&quot;)</p>
 				</div>
 				<div class='third'>
-					<p><input name='B' type='text' class='text numeric'></p>
+					<p><input name='Z' type='text' class='text numeric'></p>
 				</div>
 			</div>
 			<div class='parent last'>
@@ -351,7 +351,7 @@
 					<p>How many people so far (total to date) have registered according to the DDC system? (enter number) (if not permitted to record this figure enter &quot;9999&quot;)</p>
 				</div>
 				<div class='third'>
-					<p><input name='B' type= 'text'  class='text numeric'> </p>
+					<p><input name='AA' type= 'text'  class='text numeric'> </p>
 				</div>
                         </div>
                     <div class="buttons">
