Modified vr_incident form. The alignment of the checklist was modified.

--- a/psc/templates/psc/vr_incident_form.html
+++ b/psc/templates/psc/vr_incident_form.html
@@ -13,7 +13,7 @@
 					<p>PSC</p>
 				</div>
 				<div class='second'>
-					<p>Observer ID (always start every text message with "PSC" followed by your Observer ID Number)</p>
+					<div class='options'>Observer ID (always start every text message with "PSC" followed by your Observer ID Number)</div>
 				</div>
 				<div class='third'>
 					<input type='text' name='PSC' class='text numeric'>
@@ -32,7 +32,7 @@
 					<p>Registration Centre not open/does not exist</p>
 				</div>
 				<div class='third'>
-					<p><input name='A' type='checkbox' class='checkbox numeric' value='1'></p>
+					<div class='options'><input name='A' type='checkbox' class='checkbox numeric' value='1'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -43,7 +43,7 @@
 					<p>Not permitted to observe at registration centre</p>
 				</div>
 				<div class='third'>
-					<p><input name='B' type='checkbox' class='checkbox numeric' value='1'></p>
+					<div class='options'><input name='B' type='checkbox' class='checkbox numeric' value='1'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -54,7 +54,7 @@
 					<p>Voter registration suspended at the centre</p>
 				</div>
 				<div class='third'>
-					<p><input name='C' type='checkbox' class='checkbox numeric' value='1'></p>
+					<div class='options'><input name='C' type='checkbox' class='checkbox numeric' value='1'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -65,7 +65,7 @@
 					<p>Missing or incomplete Direct Data Capture (DDC) system</p>
 				</div>
 				<div class='third'>
-					<p><input name='D' type='checkbox' class='checkbox numeric' value='1'></p>
+					<div class='options'><input name='D' type='checkbox' class='checkbox numeric' value='1'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -76,7 +76,7 @@
 				<p>Not functioning Direct Data Capture (DDC) system</p>
 				</div>
 				<div class='third'>
-					<p><input name='E' type='checkbox' class='checkbox numeric' value='1'></p>
+					<div class='options'><input name='E' type='checkbox' class='checkbox numeric' value='1'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -87,7 +87,7 @@
 					<p>Centre ran out of materials</p>
 				</div>
 				<div class='third'>
-					<p><input name='F' type='checkbox' class='checkbox numeric' value='1'></p>
+					<div class='options'><input name='F' type='checkbox' class='checkbox numeric' value='1'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -98,7 +98,7 @@
 					<p>Registering of large numbers of underage persons</p>
 				</div>
 				<div class='third'>
-					<p><input name='G' type='checkbox' class='checkbox numeric' value='1'></p>
+					<div class='options'><input name='G' type='checkbox' class='checkbox numeric' value='1'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -109,7 +109,7 @@
 					<p>Registering of large numbers of people who have already registered</p>
 				</div>
 				<div class='third'>
-					<p><input name='H' type='checkbox' class='checkbox numeric' value='1'></p>
+					<div class='options'><input name='H' type='checkbox' class='checkbox numeric' value='1'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -120,7 +120,7 @@
 					<p>Registering of large numbers of people not from the community </p>
 				</div>
 				<div class='third'>
-					<p><input name='J' type='checkbox' class='checkbox numeric' value='1'></p>
+					<div class='options'><input name='J' type='checkbox' class='checkbox numeric' value='1'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -131,7 +131,7 @@
 					<p>Registering large numbers of people without providing them temporary voter's cards</p>
 				</div>
 				<div class='third'>
-					<p><input name='K' type='checkbox' class='checkbox numeric' value='1'></p>
+					<div class='options'><input name='K' type='checkbox' class='checkbox numeric' value='1'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -142,7 +142,7 @@
 					<p>Registering large numbers of people who receive temporary voter's cards with missing or inaccurate information</p>
 				</div>
 				<div class='third'>
-					<p><input name='M' type='checkbox' class='checkbox numeric' value='1'></p>
+					<div class='options'><input name='M' type='checkbox' class='checkbox numeric' value='1'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -153,7 +153,7 @@
 					<p>Violence in or around the centre</p>
 				</div>
 				<div class='third'>
-					<p><input name='N' type='checkbox' class='checkbox numeric' value='1'></p>
+					<div class='options'><input name='N' type='checkbox' class='checkbox numeric' value='1'></div>
 				</div>
 			</div>
 			<div class='parent'>
@@ -164,7 +164,7 @@
 					<p>Intimidation or harassment in or around the centre</p>
 				</div>
 				<div class='third'>
-					<p><input name='P' type='checkbox' class='checkbox numeric' value='1'></p>
+					<div class='options'><input name='P' type='checkbox' class='checkbox numeric' value='1'></div>
 				</div>
 			</div>
 			<div class='parent last'>
@@ -175,7 +175,7 @@
 					<p>Other</p>
 				</div>
 				<div class='third'>
-					<p><input name='Q' type='checkbox' class='checkbox numeric' value='1'></p>
+					<div class='options'><input name='Q' type='checkbox' class='checkbox numeric' value='1'></div>
 				</div>
 			</div>
 		</div>
