Remodified Display/Claims & Objection Checklist Set a maxlenght restrictions for fields accepting numeric input.

--- a/psc/templates/psc/dco_checklist_form.html
+++ b/psc/templates/psc/dco_checklist_form.html
@@ -17,7 +17,7 @@
 					<p>Observer ID (always start every text message with "PSC" followed by your Observer ID Number)</p>
 				</div>
 				<div class='third'>
-					<input type='text' name='PSC' class='text numeric'>
+					<input type='text' name='PSC' class='text numeric' maxlength='6'>
 				</div>
 			</div>
 		</div>
@@ -60,7 +60,7 @@
 					<p>How many registration officers were at the registration centre? (enter number)</p>
 				</div>
 				<div class='third'>
-					<input type='text' class='text numeric'>
+					<input type='text' class='text numeric' maxlength='6'>
 				</div>
 			</div>
 			<div class='parent'>
@@ -100,7 +100,7 @@
 					<p>How many political party agents were at the registration centre? (enter number)</p>
 				</div>
 				<div class='third'>
-					<input type='text' name='F' class='text numeric'>
+					<input type='text' name='F' class='text numeric' maxlength='6'>
 				</div>
 			</div>
 			<div class='parent last'>
@@ -329,7 +329,7 @@
 					<p>How many people registered during this day? (record number from Certificate of Completion of Daily Registration of Voters Form EC.1B(1)) (enter number) (if not permited to record this figure enter "9999"</p>
 				</div>
 				<div class='third'>
-					<p><input name='Y' type='text' class='text numeric'></p>
+					<p><input name='Y' type='text' class='text numeric' maxlength='6'></p>
 				</div>
 			</div>
 			<div class='parent'>
@@ -340,7 +340,7 @@
 					<p>How many people so far (total to date) have registered at this centre according to the Manual Register of Voters (MRV) Form EC.1A? (enter number) (if not permitted to record this figure enter "9999")</p>
 				</div>
 				<div class='third'>
-					<p><input name='Z' type='text' class='text numeric'></p>
+					<p><input name='Z' type='text' class='text numeric' maxlength='6'></p>
 				</div>
 			</div>
 			<div class='parent last'>
@@ -351,7 +351,7 @@
 					<p>How many people so far (total to date) have registered according to the DDC system? (enter number) (if not permitted to record this figure enter "9999")</p>
 				</div>
 				<div class='third'>
-					<p><input name='AA' type='text' class='text numeric'> </p>
+					<p><input name='AA' type='text' class='text numeric' maxlength='6'> </p>
 				</div>
 		</div>
                     <div class="buttons">
