Modified Incident form. Made changes to the PSC textbox to ensure it accepts maximum length of accept 6 values and properly aligned the checkboxes.

--- a/psc/templates/psc/vr_incident_form.html
+++ b/psc/templates/psc/vr_incident_form.html
@@ -16,7 +16,7 @@
 					<div class='options'>Observer ID (always start every text message with "PSC" followed by your Observer ID Number)</div>
 				</div>
 				<div class='third'>
-					<input type='text' name='PSC' class='text numeric'>
+					<input type='text' name='PSC' class='text numeric' maxlength="6">
 				</div>
 			</div>
 		</div>
